--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,6 +1,12 @@
 body {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1000px;
     font-family: "open sans";
-    margin: 0;
+  }
+  h1 {
+    font-weight: bold;
+    text-align: center;
   }
   ul {
     list-style-type: none;
@@ -11,20 +17,20 @@ body {
   }
   li {
     padding: 40px;
-    border: 2px solid lightblue;
+    border: 2px solid darkgray;
     /* placeholder */
     margin-right: 5px;
     cursor: pointer;
   }
   li:hover {
-    background-color: navy;
+    background-color: #161045;
     color: white;
   }
   li:active {
     opacity: 0.5;
   }
   * {
-    color: gray;
+    color: black;
   }
   .main-body {
     padding: 20px;
@@ -32,18 +38,29 @@ body {
   .main-blocks {
     display: flex;
     align-items: center;
+    padding-bottom: 15px;
   }
   .number-selected {
-    background-color: navy;
+    background-color: #161045;
     color: white;
   }
   .better-input {
     padding: 15px;
     border-radius: 10px;
-    border: 1px solid lightgrey;
+    border: 1px solid #161045;
     font-size: 15pt;
     margin: 0 10px;
   }
+
+  footer {
+    position: fixed;
+    bottom: 0;
+    width: 1000px;
+    height: 60px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+ }
   
   @media (max-width: 1100px) {
     ul {
